           tabs when building indicators.

           Removed VOL plugin. Redundant.

           Merged WILDER_MA plugin with MA plugin.

           Modified certain plugins to handle the NAME.X index format.

           Added add indicator and remove indicator options to the chart context menu. These allow indicators
           to be turned on/off without removing permanantly from the database.

           Added SHIFT plugin.

           Added IndicatorExport.pl and IndicatorImport.pl scripts.

20110416:  Added VBP (Volume By Price) indicator and HistogramHorizontal plugins. As per feature request
           #3285760.

20110417:  Changed Indicator tab width to adjust to text width as per request.

           Fixed COMPARE plugin bugs.

20110419:  Changed the indicator builder to use the script interface. The dialogs for the plugins now use
           the same keys as scripts. Updated all the plugins. CVS users will need to recreate the internal
           indicators.

           Added ability to set line thickness for plots as per user request.

20110420:  Fixed COMPARE plugin logic bug. Added an else parm NAME5 so that there are no empty values.

20110427:  Have added a gui for each plugin. We can now create scripts and indicators using a common
           unified GUI. Every script/indicator is now just a series of commands in sequence. Each command
           (plugin) settings are set and the next command builds on the previous ones.

           Now we can use a GUI to build scripts the same as we would for manual scripts using perl etc.
           We can still use an external scripting language if we want, however the majority of scripts
           do not require an external interpreter. This allows much improved speed for most scripts.

           Still working on non-indicator commands and have not tested them yet. Indicators do work
           nicely.

          